--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,8 @@ AllCops:
     - 'script/**/*'
     - 'spec/rails_helper.rb'
     - 'spec/spec_helper.rb'
+    - 'vendor/**/*'
+    - 'vendor/**/*.rb'
   UseCache: false
   TargetRailsVersion: 5.1
   TargetRubyVersion: 2.5
